[Analyzer] Update Analyzer runAnalysis signature to reflect the fact that the TestGenerator is running in the remote analysis - expect paths to tests to be returned, update tests, add configuration variables into the default Collector.jt template